--- a/srv/src/main/resources/application.yaml
+++ b/srv/src/main/resources/application.yaml
@@ -4,3 +4,5 @@ spring:
 cds:
   datasource:
     auto-config.enabled: false
+    odataV4.endpoint.path: '/api'
+    odataV2.endpoint.path: '/api-v2'
