--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "license": "ISC",
   "repository": "<Add your repository here>",
   "cds": {
+    "hana": {
+       "deploy-format": "hdbtable"
+    },
     "requires": {
-      "db": {
-        "kind": "sqlite",
-        "credentials": {
-          "database": "sqlite.db"
+        "db": {
+            "kind": "hana"
         }
-      }
     }
   }
 }
