--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
   "repository": "<Add your repository here>",
   "cds": {
     "hana": {
-       "deploy-format": "hdbtable"
+      "deploy-format": "hdbtable"
     },
     "requires": {
-        "db": {
-            "kind": "hana"
+      "db": {
+        "kind": "sqlite",
+        "credentials": {
+          "database": "db.sqlite"
         }
+      }
     }
   }
 }
