--- a/mta.yaml
+++ b/mta.yaml
@@ -1,7 +1,7 @@
 _schema-version: '3.1'
 ID: CapEx
 version: 1.0.0-SNAPSHOT
-description: "CapEx application"
+description: CapEx application
 parameters:
   enable-parallel-deployments: true
 modules:
@@ -11,21 +11,21 @@ modules:
     parameters:
       buildpack: sap_java_buildpack
     properties:
-      SPRING_PROFILES_ACTIVE: cloud,sandbox
+      SPRING_PROFILES_ACTIVE: 'cloud,sandbox'
       JBP_CONFIG_COMPONENTS: "jres: ['com.sap.xs.java.buildpack.jre.SAPMachineJRE']"
       JBP_CONFIG_SAP_MACHINE_JRE: '{ use_offline_repository: false, version: 17.+ }'
     build-parameters:
       builder: custom
       commands:
         - mvn clean package -DskipTests=true
-      build-result: target/*-exec.jar
+      build-result: 'target/*-exec.jar'
     provides:
-      - name: srv-api # required by consumers of CAP services (e.g. approuter)
+      - name: srv-api
         properties:
-          srv-url: ${default-url}
+          srv-url: '${default-url}'
     requires:
       - name: CapEx-db
-
+      - name: wm_workflow
   - name: CapEx-db-deployer
     type: hdb
     path: db
@@ -37,10 +37,14 @@ modules:
         - npm run build
     requires:
       - name: CapEx-db
-
 resources:
   - name: CapEx-db
     type: com.sap.xs.hdi-container
     parameters:
       service: hana
       service-plan: hdi-shared
+  - name: wm_workflow
+    type: org.cloudfoundry.existing-service
+    parameters:
+      service: workflow
+      service-plan: standard
