--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,22 @@
 				<scope>import</scope>
 			</dependency>
 			
+			<!-- Testing -->
+			<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+			<exclusions>
+				<exclusion>
+					<artifactId>logback-classic</artifactId>
+					<groupId>ch.qos.logback</groupId>
+				</exclusion>
+
+				<exclusion>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-starter-logging</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
 		</dependencies>
 	</dependencyManagement>
 
